Fixed description spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -281,13 +281,13 @@ table tr:nth-child(even) {
 
 .article-details {
   display: flex;
-  padding: 0 2px;
+  padding: 0 2px 4px 2px;
   flex-direction: column;
   justify-content: center;
 }
 
 .article-abstract-container {
-  padding: 2px;
+  padding: 2px 2px 0 2px;
 }
 
 .article-description {
